Update registered maps